# wasc

./: .gitignore  404.html  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  requirements_dev.txt
.github/workflows/: docs.yml
checkers/: index.html
data/: checkers.csv  criteria.yml  example_websites.csv
docs/: checkers.md  index.md  license.md  releases.md
license/: index.html
releases/: index.html
search/: search_index.json
src/waccess/: __about__.py  __init__.py  __main__.py  checker.py  checker_factory.py  criterion.py  flb_checkers.py  report.py  utils.py
src/waccess/cli/: __init__.py
src/wasc/: __about__.py  __main__.py  abstract_checker.py  checker_factory.py  checkers.py  criterion.py  default_checkers.py  flb_checkers.py  report.py  utils.py
src/wasc/cli/: __init__.py
tests/: __init__.py  test_checker.py  test_checker_factory.py  test_utils.py
tests/data/: checkers_example.csv  crit_example.yml  url_example.csv
