[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wasc"
dynamic = ["version"]
description = 'Web Accessibility Simple Checker'
readme = "README.md"
requires-python = ">=3.7"
license = "CECILL-2.1"
keywords = ["Web", "Accessibility", "Criteria", "Checker"]
authors = [
  { name = "Guillaume Collet", email = "bilouweb@free.fr" },
  { name = "Juliette Francis", email = "juliette.francis@etudiant.univ-rennes.fr" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "click",
  "beautifulsoup4",
  "tqdm",
  "pandas",
  "trafilatura"
]

[project.urls]
Documentation = "https://github.com/gcollet/wasc#readme"
Issues = "https://github.com/gcollet/wasc/issues"
Source = "https://github.com/gcollet/wasc"

[project.scripts]
wasc = "wasc.cli:wasc"

[tool.hatch.version]
path = "src/wasc/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]

[tool.hatch.envs.default.env-vars]
WASC_CRITERIA_DEFAULT_PATH = "./data/default_criteria.yml"

[tool.hatch.envs.build.env-vars]
WACS_CRITERIA_DEFAULT_PATH = "./data/default_criteria.yml"

[tool.hatch.envs.default.scripts]
profile = "python -m cProfile -s cumtime src/wasc/__main__.py {args:tests}"
test = "pytest -v {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
lcov = "coverage lcov"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]
test_all = [
  "test-cov tests/__init__.py",
  "cov-report",
  "lcov",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]

[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/wasc tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["wasc"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["wasc", "tests"]
branch = true
parallel = true
omit = [
  "src/wasc/__about__.py",
]

[tool.coverage.paths]
wasc = ["src/wasc", "*/wasc/src/wasc"]
tests = ["tests", "*/wasc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs"
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000"